Sun Dec 28 16:25:12 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cygwin/GNUmakefile.in (EXTOBJS): override to add resource files
	  always.  [ruby-core:67153] [Bug #10657]

Sun Dec 28 13:54:26 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (f_kwrest, new_args_tail_gen): unnamed rest keyword and
	  keywords bits arguments should be unique.  since internal IDs
	  depend on the local variable index in the current scope, new ID
	  should be made before popping those vtables.
	  [ruby-core:67157] [Bug #10659]

Sat Dec 27 20:12:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/generator/generator.c (JSON_Generator_State_type): add
	  #ifdef for backward compatibility.

	* ext/json/parser/parser.rl (JSON_Parser_type): ditto.

	* ext/json/generator/generator.h (ZALLOC): add fallback definition.

	* ext/json/parser/parser.h (ZALLOC): ditto.

Sat Dec 27 16:54:05 2014  Tanaka Akira  <akr@fsij.org>

	* process.c: Unused code removed.
	  It seems waitpid() is universaly available on POSIX platforms.

Sat Dec 27 15:08:27 2014  Eric Wong  <e@80x24.org>

	* vm_core.h (rb_vm_living_threads_insert): preserve order
	  [Bug #10660] [ruby-core:67154] [ruby-core:67159]

Sat Dec 27 13:08:20 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/socket/socket.c: improved document for YARD doc.
	  [fix GH-795][ci skip] Patch by @tlewin

Sat Dec 27 10:11:21 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/tk/lib/tkextlib/tcllib/plotchart.rb: fix to invoke correct function
	  of tcllib. Patch by @zalt50 [fix GH-787]

Sat Dec 27 10:03:41 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/make-snapshot: show sha1 digest when making packages.
	  it's request from https://github.com/ruby/www.ruby-lang.org/issues/921
	  [fix GH-794]

Fri Dec 26 15:32:16 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tcltklib.c (ip_invoke_core): remove probably duplicate
	  dead code.

Fri Dec 26 15:28:27 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
